Fix gap between password input & error msg

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,10 @@ main {
 
 .pw__container {
 	position: relative;
+	align-self: flex-start;
 }
+
+
 
 .pw__error-message {
 	visibility: hidden;
